<resources>
    <string name="app_name">MyDelivery</string>
    <string name="str_recent_activity">최근 검색 내역</string>

    <!-- Dialog message -->
    <string name="str_update_tracking">갱신되었습니다</string>
    <string name="str_invalid_code">송장번호를 다시 확인해주세요</string>
    <string name="str_remove_confirm">삭제하시겠습니까?</string>

    <!-- label -->
    <string name="str_button_ok">확인</string>
    <string name="str_remove_label">삭제</string>
    <string name="str_dialog_cancel_label">취소</string>

    <!-- menu -->
    <string name="str_menu">최근 검색</string>
    <string name="str_remove_all">전체 삭제</string>


    <string name="str_edit_input">송장번호를 입력하세요</string>
    <string name="str_label_delivery_number">운송장번호</string>
    <string name="str_label_from">보내는 분</string>
    <string name="str_label_to">받는 분</string>
    <string name="str_label_state">배송 상태</string>
    <string name="str_label_time">처리 시간</string>
    <string name="str_label_state_detail">구분</string>
    <string name="str_label_location">처리 지점</string>
    <string name="str_label_description">상품 상태</string>

    <string name="str_lost_network">네트워크와 연결이 끊어졌습니다.</string>
    <string name="str_not_connected_network_for_tracker">Unable to resolve host "apis.tracker.delivery": No address associated with hostname</string>
    <string name="str_need_connect_network">네트워크 연결이 필요합니다.</string>
    <string name="str_unexpected_error_message">알수없는 에러입니다.</string>
    <string name="str_number_format_exception">숫자만 입력해주세요</string>
</resources>