<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:gravity="center">
    <androidx.appcompat.widget.Toolbar
        android:id = "@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/kblz"
            android:textSize="20dp"
            tools:text = "Toolbar" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Spinner
            android:id = "@+id/sp_carrier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layoutDirection="rtl"/>
        <EditText
            android:id = "@+id/edt_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint = "@string/str_edit_input"
            android:textAlignment="center"
            android:backgroundTint="@android:color/transparent"
            android:textSize = "20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id = "@+id/sl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="visible">
            <RelativeLayout
                android:id = "@+id/rl_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ll_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_alignParentTop="true">
                    <TextView
                        style="@style/label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text = "@string/str_label_time"
                        android:layout_weight="1" />
                    <TextView
                        style="@style/label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text = "@string/str_label_state_detail"
                        android:layout_weight="1"/>
                    <TextView
                        style="@style/label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text = "@string/str_label_location"
                        android:layout_weight="1"/>
                    <TextView
                        style="@style/label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text = "@string/str_label_description"
                        android:layout_weight="1"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id = "@+id/rv_trackList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/ll_label"/>
                <Button
                    android:id = "@+id/btn_inputOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/str_button_ok"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/kblz"
                    android:background="@drawable/button_ripple"
                    android:layout_alignBottom="@id/rv_trackList"/>
            </RelativeLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</LinearLayout>